# dfcloud

./: .gitignore  README.md
cli/: README.md  pyproject.toml
cli/dfcloud/: __init__.py  cli.py
deepfabric-job/: Dockerfile  entrypoint.py
infra/: .gitignore  main.tf  outputs.tf  terraform.tfvars copy.example  variables.tf
