[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfcloud"
version = "0.1.0"
description = "CLI for running DeepFabric jobs on Google Cloud"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "click>=8.0",
    "google-auth>=2.0",
    "google-cloud-storage>=2.0",
    "google-cloud-run>=0.10",
    "pyyaml>=6.0",
    "requests>=2.28",
    "rich>=13.0",
    "tabulate>=0.9",
]

[project.scripts]
dfcloud = "dfcloud.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
